--- a/about_me.css
+++ b/about_me.css
@@ -14,8 +14,8 @@
 /*Persönliches Foto hinzufügen*/
 #about_me_section img{
     width: 400px;
-    max-width: calc(90% - 30px);
-    border: 15px solid var(--main-brand-color);
+    /*max-width: calc(90% - 30px);*/
+    border: 15px solid var(--text-color);
 }
 .about_me_container h2{
   font-size: 80px;
