--- a/objective_section.css
+++ b/objective_section.css
@@ -13,7 +13,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:  'consolas';
+    font-family:  consolas;
 }
 
 .container
@@ -29,8 +29,8 @@
 .container .box
 {
 position: relative;
-width:  350px;
-height: 400px;
+width:  400px;
+height: 520px;
 
 color:#fff;
 background: #111;
@@ -116,7 +116,7 @@ transition: 0.5s;
         }   
          .container .box .content a {
              display: inline-block; 
-             font-size: 1.1em;
+             font-size: 1.2em;
              color: #111;
              background-color: #fff;
              padding: 10px;
