--- a/about_me.css
+++ b/about_me.css
@@ -8,22 +8,23 @@
     flex-wrap: wrap-reverse;
 }
 .about_me_container{
-    width: 800px;
+    width: 850px;
     max-width: 90%;
+    
 }
 /*Persönliches Foto hinzufügen*/
 #about_me_section img{
-    width: 400px;
-    max-width: calc(90% - 30px);
+    width: 450px;
+    max-width: calc(90% -30px);
     border: 15px solid var(--text-color);
 }
 .about_me_container h2{
-  font-size: 80px;
- 
+  font-size: 80px ;  
 }
+ 
 .about_me_container p{
-    text-align: start;
-    line-height: 150%;
+    text-align: justify;
+    line-height: 155%;
     
 }
 @media(max-width: 800px){
