--- a/objective_section.css
+++ b/objective_section.css
@@ -13,25 +13,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:  consolas;
-}
+   
 
 .container
 {
+    font-family: 'consolas';
     position: relative;   
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px;
+    padding: 40px 0;
     flex-wrap:wrap;
 
 }
 .container .box
 {
 position: relative;
-width:  400px;
-height: 520px;
-
+width:  330px;
+height: 400px;
 color:#fff;
 background: #111;
 display: flex;
@@ -116,11 +115,12 @@ transition: 0.5s;
         }   
          .container .box .content a {
              display: inline-block; 
-             font-size: 1.2em;
+             font-size: 1.1em;
              color: #111;
              background-color: #fff;
              padding: 10px;
              text-decoration: none;
              font-weight: 700;
              
-         }
+        }
+}
